<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emlek</string>
    <string name="hello_world">Emlek - your artificial memory!</string>
    <string name="action_settings">Settings</string>
    <string name="action_photo">Take a picture</string>
    <string name="action_text">Write something</string>
    <string name="action_voice">Record voice</string>
    <string name="action_video">Record video</string>
    <string name="action_attach">Attach something</string>

</resources>
